# mynk

./: Cargo.toml  README.md  flake.nix
src/: main.rs
