[package]
name = "mynk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.44"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
